--- a/style.css
+++ b/style.css
@@ -29,14 +29,9 @@ body {
     top: 0;
     z-index: 1000;
     background: #f6f5f0;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-.navbar-container {
-    /* max-width: 1200px; */
     margin: auto;
     padding: 1rem 6.5rem;
-    box-shadow: 0px .4px 10px -2px black;
+    box-shadow: 0 2px 5px var(--primary-color);
 }
 
 .navbar {
@@ -134,6 +129,7 @@ body {
 }
 
 @media (max-width: 768px) {
+
     .nav-links {
         display: none;
         flex-direction: column;
@@ -245,9 +241,39 @@ body {
     height: 200px;
     border-radius: 50%;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+    animation: bounce 2s infinite cubic-bezier(.25, .1, .25, 1);
+    animation-delay: 1.5s;
+}
+
+.hero-image img:hover {
+    transform: scale(1.3);
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
+        transform: translateY(-15px);
+    }
 }
 
 @media (min-width: 768px) {
+    .hero-image img {
+        width: 300px;
+        height: 300px;
+    }
+
     .hero-container {
         flex-direction: row;
         text-align: left;
@@ -339,6 +365,7 @@ body {
 
 .card ul li:hover {
     background-color: black;
+    transform: scale(1.03);
 
 }
 
