--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     z-index: 1000;
     background: #f6f5f0;
     margin: auto;
-    padding: 1rem 6.5rem;
+    padding: 1rem 2rem; /* Reduced padding */
     box-shadow: 0 2px 5px var(--primary-color);
 }
 
@@ -38,9 +38,10 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 90%;
+    width: 100%; /* Adjusted width */
     margin: 0 auto;
     position: relative;
+    gap: 20px;
 }
 
 .logo>a {
@@ -54,6 +55,7 @@ body {
 }
 
 .logo {
+    white-space: nowrap; /* Prevent wrapping */
     font-size: 1.5rem;
     font-weight: bold;
     color: var(--primary-color);
