--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ body {
     background-color: #fff;
     border: none;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 8px hsl(200, 100%, 95%);
     padding: 20px;
     margin: 10px;
     flex: 1 1 calc(33.333% - 40px);
@@ -332,14 +332,13 @@ body {
 .card:hover {
     transform: translateY(-10px);
     box-shadow: 0 8px 16px #007bb947;
-    /* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); */
     cursor: pointer;
 
     &.card img{
         background-color: #30baff74;
     }
 
-    background-color: #e7f7ff;
+    background-color: hsl(200, 100%, 95%);
 }
 
 .card img {
